[gd_scene load_steps=8 format=3 uid="uid://b2c6oa66i2fn"]

[ext_resource type="Script" uid="uid://d1lowynlx4v34" path="res://scripts/screens/pause_screen.gd" id="1_26ahl"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rnwwu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p2xpu"]
bg_color = Color(0.784314, 0.784314, 0.784314, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.207843)
shadow_size = 5
shadow_offset = Vector2(0, 3.5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vmlou"]
bg_color = Color(0.588235, 0.588235, 0.588235, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.207843)
shadow_size = 5
shadow_offset = Vector2(0, 3.5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rnwwu"]
bg_color = Color(1, 1, 1, 0.607843)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.207843)
shadow_size = 5
shadow_offset = Vector2(0, 3.5)

[sub_resource type="FontFile" id="FontFile_066xx"]
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/35/0/ascent = 0.0
cache/0/35/0/descent = 0.0
cache/0/35/0/underline_position = 0.0
cache/0/35/0/underline_thickness = 0.0
cache/0/35/0/scale = 1.0
cache/0/1000/0/ascent = 0.0
cache/0/1000/0/descent = 0.0
cache/0/1000/0/underline_position = 0.0
cache/0/1000/0/underline_thickness = 0.0
cache/0/1000/0/scale = 1.0
cache/0/100/0/ascent = 0.0
cache/0/100/0/descent = 0.0
cache/0/100/0/underline_position = 0.0
cache/0/100/0/underline_thickness = 0.0
cache/0/100/0/scale = 1.0
cache/0/500/0/ascent = 0.0
cache/0/500/0/descent = 0.0
cache/0/500/0/underline_position = 0.0
cache/0/500/0/underline_thickness = 0.0
cache/0/500/0/scale = 1.0
cache/0/200/0/ascent = 0.0
cache/0/200/0/descent = 0.0
cache/0/200/0/underline_position = 0.0
cache/0/200/0/underline_thickness = 0.0
cache/0/200/0/scale = 1.0
cache/0/50/0/ascent = 0.0
cache/0/50/0/descent = 0.0
cache/0/50/0/underline_position = 0.0
cache/0/50/0/underline_thickness = 0.0
cache/0/50/0/scale = 1.0
cache/0/75/0/ascent = 0.0
cache/0/75/0/descent = 0.0
cache/0/75/0/underline_position = 0.0
cache/0/75/0/underline_thickness = 0.0
cache/0/75/0/scale = 1.0

[sub_resource type="LabelSettings" id="LabelSettings_62gm0"]
font = SubResource("FontFile_066xx")
font_size = 75
font_color = Color(0.843137, 0.933333, 0.054902, 1)
outline_size = 30
outline_color = Color(0.369265, 0.359442, 0.103727, 1)

[node name="pauseScreen" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.999126, 1)
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_26ahl")

[node name="Panel" type="Panel" parent="."]
modulate = Color(1, 1, 1, 0.996078)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -140.0
offset_top = -60.0
offset_right = 141.0
offset_bottom = 325.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 12

[node name="Resume" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/focus = SubResource("StyleBoxEmpty_rnwwu")
theme_override_styles/hover = SubResource("StyleBoxFlat_p2xpu")
theme_override_styles/pressed = SubResource("StyleBoxFlat_vmlou")
theme_override_styles/normal = SubResource("StyleBoxFlat_rnwwu")
text = "Resume
"

[node name="Restart" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/focus = SubResource("StyleBoxEmpty_rnwwu")
theme_override_styles/hover = SubResource("StyleBoxFlat_p2xpu")
theme_override_styles/pressed = SubResource("StyleBoxFlat_vmlou")
theme_override_styles/normal = SubResource("StyleBoxFlat_rnwwu")
text = "Restart"

[node name="Settings" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/focus = SubResource("StyleBoxEmpty_rnwwu")
theme_override_styles/hover = SubResource("StyleBoxFlat_p2xpu")
theme_override_styles/pressed = SubResource("StyleBoxFlat_vmlou")
theme_override_styles/normal = SubResource("StyleBoxFlat_rnwwu")
text = "Settings
"

[node name="Main Menu" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/focus = SubResource("StyleBoxEmpty_rnwwu")
theme_override_styles/hover = SubResource("StyleBoxFlat_p2xpu")
theme_override_styles/pressed = SubResource("StyleBoxFlat_vmlou")
theme_override_styles/normal = SubResource("StyleBoxFlat_rnwwu")
text = "Main Menu"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -150.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 2
text = "Paused"
label_settings = SubResource("LabelSettings_62gm0")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="VBoxContainer/Main Menu" to="." method="_on_main_menu_pressed"]
